--- a/src/assets/styles/components/contact/_contact.scss
+++ b/src/assets/styles/components/contact/_contact.scss
@@ -57,6 +57,7 @@
         min-height: 100vh;
         background-size: cover;
         background-position: right;
+        background-attachment: fixed;
     }
 }
 
