--- a/src/assets/styles/layout/_general.scss
+++ b/src/assets/styles/layout/_general.scss
@@ -41,3 +41,25 @@ h2{
 a{
     text-decoration: none!important;
 }
+.some-cases{
+ul{
+display: grid;
+grid-template-columns: repeat(3,1fr);
+gap: 20px;
+@media (max-width:830px) {
+
+    grid-template-columns: repeat(2,1fr); 
+}
+@media (max-width:600px) {
+    grid-template-columns: repeat(1,1fr); 
+}
+img{
+    border-radius: 8px;
+    border: 2px solid #23232380;
+    height:300px;
+    object-fit: cover;
+    margin: 0!important;
+}
+
+}
+}
