--- a/src/assets/styles/main-sass/style.css
+++ b/src/assets/styles/main-sass/style.css
@@ -44,6 +44,30 @@ a {
   text-decoration: none !important;
 }
 
+.some-cases ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+@media (max-width: 830px) {
+  .some-cases ul {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 600px) {
+  .some-cases ul {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+.some-cases ul img {
+  border-radius: 8px;
+  border: 2px solid rgba(35, 35, 35, 0.5019607843);
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 0 !important;
+}
+
 .nav-bar {
   background-color: #F5F5F7;
 }
@@ -132,6 +156,7 @@ a {
   width: 100%;
   background-position: bottom;
   color: white;
+  background-attachment: fixed;
   background-repeat: no-repeat;
   transition: background-position 5s ease-in-out;
   -webkit-transition: background-position 5s ease-in-out;
@@ -157,6 +182,10 @@ a {
   left: 50%;
   font-size: 600;
   font-size: 20px;
+}
+
+.home-header:hover {
+  background-position: var(--offsetX, 0) var(--offsetY, 0);
 }
 
 .home-branding-images img {
@@ -993,6 +1022,7 @@ a {
   min-height: 100vh;
   background-size: cover;
   background-position: right;
+  background-attachment: fixed;
 }
 
 .contactform {
